# safetrust-ZK

./:  docker-compose.yml  .gitignore  CONTRIBUTING.md  LICENSE  Makefile  README.md  package.json  pnpm-lock.yaml  pnpm-workspace.yaml
.github/workflows/: ci.yml
circuits/milestone_release/: Nargo.toml  Prover.toml
circuits/milestone_release/src/: main.nr
circuits/private_escrow/: Nargo.toml  Prover.toml
circuits/private_escrow/src/: main.nr
circuits/proof_of_funds/: Nargo.toml  Prover.toml
circuits/proof_of_funds/src/: main.nr
circuits/verifier_fixture/: Nargo.toml
circuits/verifier_fixture/src/: main.nr
contracts/escrow_verifier/: Cargo.toml
contracts/escrow_verifier/src/: lib.rs  test.rs
contracts/escrow_verifier/test_snapshots/test/: verify_proof_accepts_generated_fixture.1.json  verify_proof_rejects_empty_proof.1.json
db/: init.sql
demo/: .env.example  Dockerfile  next.config.mjs  package.json
demo/app/: app-providers.tsx  globals.css  layout.tsx  page.tsx  providers.tsx
demo/app/components/: FreighterConnectButton.tsx  PollarWalletBar.tsx
demo/lib/: pollar-client.ts  pollar.ts  seeds.ts
docs/: architecture.md  circuit-design.md  integration-guide.md  running.md
scripts/: build-stellar-fixtures.sh  start-stellar-local.sh  stop-stellar-local.sh  verify-on-chain.sh
sdk/: package.json
sdk/src/: circuits.ts  index.test.ts  index.ts  stellar.ts  viewKey.ts
sdk/src/crypto/: aes.ts  crypto.test.ts  field.ts  pedersen.ts
sdk/src/provers/: milestoneRelease.ts  privateEscrow.ts  proofOfFunds.ts  shared.ts
(+6 files in other folders)
